// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Helpers marginBottom should output style for marginBottom at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      margin-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginBottom should output style for marginBottom at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      margin-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginBottom should output style for marginBottom at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      margin-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginBottom should output style for marginBottom at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      margin-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginBottom should output style for marginBottom at a XS breakpoint 1`] = `
Array [
  "
      margin-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;

exports[`Box Helpers marginLeft should output style for marginLeft at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      margin-left: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginLeft should output style for marginLeft at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      margin-left: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginLeft should output style for marginLeft at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      margin-left: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginLeft should output style for marginLeft at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      margin-left: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginLeft should output style for marginLeft at a XS breakpoint 1`] = `
Array [
  "
      margin-left: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;

exports[`Box Helpers marginRight should output style for marginRight at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      margin-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginRight should output style for marginRight at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      margin-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginRight should output style for marginRight at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      margin-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginRight should output style for marginRight at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      margin-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginRight should output style for marginRight at a XS breakpoint 1`] = `
Array [
  "
      margin-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;

exports[`Box Helpers marginTop should output style for marginTop at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      margin-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginTop should output style for marginTop at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      margin-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginTop should output style for marginTop at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      margin-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginTop should output style for marginTop at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      margin-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers marginTop should output style for marginTop at a XS breakpoint 1`] = `
Array [
  "
      margin-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;

exports[`Box Helpers paddingX should output style for paddingX at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      padding-left: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingX should output style for paddingX at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      padding-left: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingX should output style for paddingX at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      padding-left: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingX should output style for paddingX at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      padding-left: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingX should output style for paddingX at a XS breakpoint 1`] = `
Array [
  "
      padding-left: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-right: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;

exports[`Box Helpers paddingY should output style for paddingY at a LG breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "992px",
  ") {
      ",
  "
        ",
  "
      padding-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingY should output style for paddingY at a MD breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "768px",
  ") {
      ",
  "
        ",
  "
      padding-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingY should output style for paddingY at a SM breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "576px",
  ") {
      ",
  "
        ",
  "
      padding-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingY should output style for paddingY at a XL breakpoint 1`] = `
Array [
  "
    @media only screen and (min-width: ",
  "1200px",
  ") {
      ",
  "
        ",
  "
      padding-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
  ";
    }
  ",
]
`;

exports[`Box Helpers paddingY should output style for paddingY at a XS breakpoint 1`] = `
Array [
  "
      padding-bottom: calc(",
  "4px",
  " * ",
  "100",
  ");
      padding-top: calc(",
  "4px",
  " * ",
  "100",
  ");
    ",
]
`;
